@@ -46,7 +46,7 @@ Two interface implementations are provided. One is for the new Firebird 3 Client
  *
  *  Contributor(s): ______________________________________.
  *    "/>
-    <Version Major="1" Minor="4" Release = "2" Build="14191" />
+    <Version Major="1" Minor="4" Release="2" Build="9999"/>
     <Files Count="38">
       <Item1>
         <Filename Value="client/3.0/firebird/Firebird.pas"/>
